adds baseurl to assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,16 @@
     <title>{{ page.title }}</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ "/assets/css/bootstrap.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="/assets/vendors/linericon/style.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/vendors/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="/assets/vendors/lightbox/simpleLightbox.css">
-    <link rel="stylesheet" href="/assets/vendors/nice-select/css/nice-select.css">
-    <link rel="stylesheet" href="/assets/vendors/animate-css/animate.css">
-    <link rel="stylesheet" href="/assets/vendors/jquery-ui/jquery-ui.css">
+    <link rel="stylesheet" href="{{ "/assets/vendors/linericon/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/vendors/owl-carousel/owl.carousel.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/vendors/lightbox/simpleLightbox.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/vendors/nice-select/css/nice-select.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/vendors/animate-css/animate.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/vendors/jquery-ui/jquery-ui.css" | prepend: site.baseurl }}">
     <!-- main css -->
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/responsive.css" | prepend: site.baseurl }}">
   </head>
   <body>
     {% include header.html %}
@@ -27,18 +27,18 @@
     {% include footer.html %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/assets/js/jquery-3.2.1.min.js"></script>
-    <script src="/assets/js/popper.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/stellar.js"></script>
-    <script src="/assets/vendors/lightbox/simpleLightbox.min.js"></script>
-    <script src="/assets/vendors/nice-select/js/jquery.nice-select.min.js"></script>
-    <script src="/assets/vendors/isotope/imagesloaded.pkgd.min.js"></script>
-    <script src="/assets/vendors/isotope/isotope-min.js"></script>
-    <script src="/assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="/assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="/assets/js/jquery.ajaxchimp.min.js"></script>
-    <script src="/assets/js/mail-script.js"></script>
-    <script src="/assets/js/theme.js"></script>
+    <script src="{{ "/assets/js/jquery-3.2.1.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/js/popper.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/js/stellar.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/vendors/lightbox/simpleLightbox.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/vendors/nice-select/js/jquery.nice-select.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/vendors/isotope/imagesloaded.pkgd.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/vendors/isotope/isotope-min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/vendors/owl-carousel/owl.carousel.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/vendors/jquery-ui/jquery-ui.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/js/jquery.ajaxchimp.min.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/js/mail-script.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/assets/js/theme.js" | prepend: site.baseurl }}"></script>
   </body>
 </html>
