--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,30 +10,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-					<ul class="nav navbar-nav menu_nav">
-						{% for item in site.data.navigation %}
-							<li class="nav-item {% if page.url == item.link %}active{% endif %}">
-								<a class="nav-link" href="{{ item.link }}">
-									{{ item.name }}
-								</a>
-							</li>
-					  {% endfor %}
-						<li class="nav-item submenu dropdown">
-							<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
-							<ul class="dropdown-menu">
-								<li class="nav-item"><a class="nav-link" href="single-blog.html">Sinlge Blog</a></li>
-								<li class="nav-item"><a class="nav-link" href="elements.html">Elements</a></li>
-							</ul>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right header_social ml-auto">
-						<li class="nav-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li class="nav-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li class="nav-item"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-						<li class="nav-item"><a href="#"><i class="fa fa-behance"></i></a></li>
-					</ul>
-				</div> 
+				{% include navigation.html %}
 			</div>
 		</nav>
 	</div>
